--- a/websocketsclient/pom.xml
+++ b/websocketsclient/pom.xml
@@ -62,6 +62,12 @@
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>nl.fhict.s3</groupId>
+          <artifactId>client</artifactId>
+          <version>1.0-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
 
   </dependencies>
 
